outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval-172195901609521441_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance gradually, increases progress weight as nodes decrease, and applies dynamic penalties based on average remaining distances, creating a balance between exploration and exploitation with fewer constraints on distant nodes.}
                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance gradually, increases progress weight as nodes decrease, and applies dynamic penalties based on average remaining distances, creating a balance between exploration and exploitation with fewer constraints on distant nodes.}
                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'
